<resources>
    <string name="app_name">camera_demo</string>
    <string name="view_capture">Capture View</string>
    <string name="btn_open_camera">Open Camera</string>
    <string name="btn_close_camera">Close Camera</string>
    <string name="btn_start_preview">Start Preview</string>
    <string name="btn_stop_preview">Stop Preview</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_set_preview_surface">Set Preview</string>
    <string name="btn_start_recording">Start Recording</string>
    <string name="btn_stop_recording">Stop Recording</string>
</resources>
